# serializer version: 1
# name: test_dashboard_media_player_snapshot[media_player.hallway_display-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.hallway_display',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.TV: 'tv'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 131840>,
    'translation_key': None,
    'unique_id': 'fully_kiosk_hallway_dashboard',
    'unit_of_measurement': None,
  })
# ---
# name: test_dashboard_media_player_snapshot[media_player.hallway_display-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'tv',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hallway Display',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 131840>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.hallway_display',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_dashboard_media_player_snapshot[media_player.kitchen_display-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.kitchen_display',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.TV: 'tv'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 131840>,
    'translation_key': None,
    'unique_id': 'chromecast_kitchen_dashboard',
    'unit_of_measurement': None,
  })
# ---
# name: test_dashboard_media_player_snapshot[media_player.kitchen_display-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'tv',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Display',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_ID: 'media_content_id'>: 'now_playing/00:00:00:00:00:01',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: 'dashboard',
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'Now playing: Test Player 1',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 131840>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.kitchen_display',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'playing',
  })
# ---
# name: test_dashboard_media_player_snapshot[media_player.my_super_test_player_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.my_super_test_player_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.SPEAKER: 'speaker'>,
    'original_icon': 'mdi:speaker',
    'original_name': None,
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 8320959>,
    'translation_key': 'media_player',
    'unique_id': '00:00:00:00:00:02',
    'unit_of_measurement': None,
  })
# ---
# name: test_dashboard_media_player_snapshot[media_player.my_super_test_player_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_queue': None,
      <MediaPlayerEntityStateAttribute.APP_ID: 'app_id'>: 'spotify',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'speaker',
      <MediaPlayerEntityStateAttribute.ENTITY_PICTURE_LOCAL: 'entity_picture_local'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Super Test Player 2',
      <MediaPlayerEntityStateAttribute.GROUP_MEMBERS: 'group_members'>: list([
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:speaker',
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_MUTED: 'is_volume_muted'>: False,
      'mass_player_type': 'player',
      <MediaPlayerEntityStateAttribute.MEDIA_ALBUM_NAME: 'media_album_name'>: 'Test Album',
      <MediaPlayerEntityStateAttribute.MEDIA_ARTIST: 'media_artist'>: 'Test Artist',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_ID: 'media_content_id'>: 'spotify://track/5d95dc5be77e4f7eb4939f62cfef527b',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: <MediaType.MUSIC: 'music'>,
      <MediaPlayerEntityStateAttribute.MEDIA_DURATION: 'media_duration'>: 300,
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'Test Track',
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'Spotify Connect',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 8320959>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.2,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.my_super_test_player_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'playing',
  })
# ---
# name: test_dashboard_media_player_snapshot[media_player.test_group_player_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.test_group_player_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.SPEAKER: 'speaker'>,
    'original_icon': 'mdi:speaker-multiple',
    'original_name': None,
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 8320959>,
    'translation_key': 'media_player',
    'unique_id': 'test_group_player_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_dashboard_media_player_snapshot[media_player.test_group_player_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_queue': 'test_group_player_1',
      <MediaPlayerEntityStateAttribute.APP_ID: 'app_id'>: 'music_assistant',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'speaker',
      <MediaPlayerEntityStateAttribute.ENTITY_PICTURE_LOCAL: 'entity_picture_local'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Group Player 1',
      <MediaPlayerEntityStateAttribute.GROUP_MEMBERS: 'group_members'>: list([
        'media_player.test_player_1',
        'media_player.my_super_test_player_2',
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:speaker-multiple',
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_MUTED: 'is_volume_muted'>: False,
      'mass_player_type': 'group',
      <MediaPlayerEntityStateAttribute.MEDIA_ALBUM_ARTIST: 'media_album_artist'>: "Guns N' Roses",
      <MediaPlayerEntityStateAttribute.MEDIA_ALBUM_NAME: 'media_album_name'>: 'Use Your Illusion I',
      <MediaPlayerEntityStateAttribute.MEDIA_ARTIST: 'media_artist'>: "Guns N' Roses",
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_ID: 'media_content_id'>: 'spotify://track/3YRCqOhFifThpSRFJ1VWFM',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: <MediaType.MUSIC: 'music'>,
      <MediaPlayerEntityStateAttribute.MEDIA_DURATION: 'media_duration'>: 536,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION: 'media_position'>: 232,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION_UPDATED_AT: 'media_position_updated_at'>: datetime.datetime(2024, 10, 30, 18, 31, 49, 565951, tzinfo=datetime.timezone.utc),
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'November Rain',
      <MediaPlayerEntityStateAttribute.MEDIA_REPEAT: 'repeat'>: <RepeatMode.ALL: 'all'>,
      <MediaPlayerEntityStateAttribute.MEDIA_SHUFFLE: 'shuffle'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 8320959>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.06,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.test_group_player_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_dashboard_media_player_snapshot[media_player.test_player_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.SOUND_MODE_LIST: 'sound_mode_list'>: list([
        'munich_translation',
        'stuttgart_translation',
      ]),
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'Music Assistant Queue',
        'Line-In',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.test_player_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.SPEAKER: 'speaker'>,
    'original_icon': 'mdi:speaker',
    'original_name': None,
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 8388543>,
    'translation_key': 'media_player',
    'unique_id': '00:00:00:00:00:01',
    'unit_of_measurement': None,
  })
# ---
# name: test_dashboard_media_player_snapshot[media_player.test_player_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_queue': '00:00:00:00:00:01',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'speaker',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Player 1',
      <MediaPlayerEntityStateAttribute.GROUP_MEMBERS: 'group_members'>: list([
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:speaker',
      'mass_player_type': 'player',
      <MediaPlayerEntityCapabilityAttribute.SOUND_MODE_LIST: 'sound_mode_list'>: list([
        'munich_translation',
        'stuttgart_translation',
      ]),
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'Music Assistant Queue',
        'Line-In',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 8388543>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.test_player_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_dashboard_media_player_snapshot[media_player.unmapped_player_display-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.unmapped_player_display',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.TV: 'tv'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 131840>,
    'translation_key': None,
    'unique_id': 'unmapped_player_display_dashboard',
    'unit_of_measurement': None,
  })
# ---
# name: test_dashboard_media_player_snapshot[media_player.unmapped_player_display-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'tv',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Unmapped Player Display',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_ID: 'media_content_id'>: 'now_playing/not-exposed-player',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: 'dashboard',
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'Now playing: not-exposed-player',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 131840>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.unmapped_player_display',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'playing',
  })
# ---
